[package]
name = "dqaunt"
version = "0.1.0"
authors = ["pavelkrolevets <pavelkrolevets@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.10"
termion = "1.5.4"
mysql = "18.2.0"
websocket = "0.24.0"
hyper = "^0.10.6"
unicase = "1.0"
url = "1.0"
rand = "0.6.1"
futures = "0.3.4"
tokio = "0.2.18"
deribit = { path = "/Users/pavelkrolevets/Projects/deribit-rs" }
dotenv = "0.15.0"
env_logger = "0.7.1"
fehler = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4.0"